test/error/badforn2.luau
local init, limit, step = 1, "hello", 2

for i = init, limit, step do
	print(i)
end
